[package]
name = "abcperf-generic-client"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "Generic Cient Building Blocks for ABCperf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared-ids = { path = "../../shared-ids", version = "0.10.0" }
abcperf = { path = "../abcperf", version = "0.10.0" }
derivative = "2.2"
async-trait = "0.1.52"
serde = "1.0"
rand = "0.8"
tracing = "0.1.10"
anyhow = "1.0"
tokio = "1.15"
futures = "0.3.19"
async-channel = "1.6.1"
quinn = "0.10.2"
s2n-quic = { version = "1.19.0", default-features = false, features = [
    "provider-address-token-default",
    "provider-tls-rustls",
] }
bytes = "1.1.0"
reqwest = { version = "0.11.8", default-features = false, features = [
    "stream",
    "rustls-tls",
] }
warp = "0.3.2"
base64 = "0.13.0"
serde-bytes-repr = "0.1.5"
serde_json = "1.0.74"
rustls = "0.21.1"
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "requests"
harness = false
