[package]
name = "abcperf"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "ABCperf: A Performance Measurement Framework for Atomic Broadcast Algorithms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared-ids = { path = "../../shared-ids", version = "0.10.0" }
ip-family = "0.2.0"
reqwest = { version = "0.11.8", default-features = false, features = [
    "stream",
    "rustls-tls",
] }
pin-project = "1.0"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0.74"
serde-bytes-repr = "0.1.5"
async-trait = "0.1.52"
tokio = { version = "1.15", features = ["full"] }
tokio-stream = "0.1.8"
futures = "0.3.19"
futures-util = "0.3.25"
quinn = "0.10.2"
anyhow = "1.0"
rustls = "0.21.1"
tracing = "0.1.10"
tracing-subscriber = "0.3.16"
derivative = "2.2"
clap = { version = "4.0.27", features = ["derive"] }
bincode = "1.3"
bytes = "1.1.0"
procfs = { version = "0.12.0", default-features = false }
base64 = "0.13.0"
rand = "0.8"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
rand_chacha = "0.3.1"
once_cell = "1.9.0"
gethostname = "0.2.2"
uuid = { version = "0.8.2", default-features = false, features = [
    "serde",
    "v4",
] }
async-channel = "1.6.1"
thiserror = "1.0"
tokio-timerfd = { version = "0.2.0" }
trait-alias-macro = { path = "../../trait-alias-macro", version = "0.10.0" }

[dev-dependencies]
rstest = "0.16.0"
rcgen = "0.10.0"
