[package]
name = "abcperf"
version = "0.10.1"
edition = "2021"
license = "MIT"
description = "ABCperf: A Performance Measurement Framework for Atomic Broadcast Algorithms"
repository = "https://github.com/abcperf/abcperf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared-ids = { workspace = true }
ip-family = "0.2.0"
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "rustls-tls",
    "http2",
] }
pin-project = "1.0"
serde = { version = "1.0", features = ["rc"] }
serde_yaml = "0.9"
serde_json = "1.0.74"
tokio = { version = "1.15", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec", "rt"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
futures = "0.3.19"
futures-util = "0.3.25"
quinn = "0.10.2"
anyhow = "1.0"
rustls = "0.21.1"
tracing = "0.1.10"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
# required because feature unicode-case needs to be on though tracing-subscriber
# has it off
regex = { version = "1" }
derivative = "2.2"
clap = { version = "~4.5.0", features = ["derive", "env"] }
bincode = "1.3"
bytes = "1.1.0"
procfs = { version = "0.17.0", default-features = false }
base64 = "0.21"
rand = "0.8"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
rand_chacha = "0.3.1"
once_cell = "1.9.0"
gethostname = "1.0.0"
uuid = { version = "1.0.0", default-features = false, features = [
    "serde",
    "v4",
] }
async-channel = "2.0.0"
thiserror = "1.0"
trait-alias-macro = { workspace = true }
netem = { workspace = true }
warp = { version = "0.3.2", features = ["tls"] }
http = "0.2"
crossbeam-utils = "0.8"
sysinfo = { version = "0.32.0", default-features = false, features = [
    "system",
    "network",
] }
derive_more = { version = "2.0.0", features = ["sum", "add"] }
itertools = "0.14"
console-subscriber = { version = "0.4", optional = true }
id-set = { workspace = true }
tokio-rustls = "0.24"
serde-bytes-repr = "0.2.0"
# dashmap = "6.1.0"
scc = "2"
chrono = "0.4"

[dev-dependencies]
rstest = "0.26.0"
rcgen = "0.14.0"
tracing-test = "0.2"


[features]
tokio-console = ["console-subscriber", "tokio/tracing"]
