[package]
name = "abcperf-noop"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "A No-Op Application for ABCperf"
repository = "https://github.com/abcperf/abcperf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared-ids = { workspace = true }
abcperf = { workspace = true }
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec", "rt"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["rc"] }
serde_with = "3.2.0"
tracing = "0.1.10"
tokio-stream = "0.1.8"
derivative = "2.2"
async-channel = "2.0.0"
hashbar = "1.0.2"
