[package]
name = "splitee-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-ids = { workspace = true }
ed25519-dalek = { version = "2.0", features = ["serde", "rand_core"] }
curve25519-dalek = { version = "4.2.0", features = ["group"] }
group = "0.13.0"
blake3 = { version = "1.8.2", features = ["traits-preview"] }
sha2 = "0.10"
rand = "0.8"
