[package]
name = "maas-tee"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "maas_tee_u"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"
shared-ids = { workspace = true }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
remote-attestation = { workspace = true }
remote-attestation-shared = { workspace = true }
sgx-utils = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"

[build-dependencies]
rust-sgx-sdk-build-helper = { workspace = true }
getrandom = "0.3"
