[package]
name = "abcperf-damysus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
abcperf = { workspace = true }
shared-ids = { workspace = true }
transaction-trait = { workspace = true }
serde = "1"
anyhow = "1"
tracing = "0.1"
either = "1"
damysus = { workspace = true }
abcperf-abcwrapper = { workspace = true }
damysus-base = { workspace = true }
