[package]
name = "damysus-tee-enclave"
version = "0.1.0"
edition = "2021"

[lib]
name = "damysus_tee_enclave"
crate-type = ["staticlib"]

[workspace]
resolver = "2"

[dependencies]
shared-ids = "0.11"
id-set = { path = "../../../other/id-set" }
damysus-base = { path = "../damysus-base" }
sgx-utils = { path = "../../../other/sgx-utils" }
damysus-tee-shared = { path = "../damysus-tee-shared" }
bincode = "1.3"
remote-attestation-shared = { path = "../../../other/remote-attestation-shared" }
once_cell = "1.18.0"
sgx_crypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = [
    "net",
    "backtrace",
] }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../../../rust-sgx-sdk/sgx_alloc" }
sgx_build_helper = { path = "../../../rust-sgx-sdk/sgx_build_helper/build_helper" }
#sgx_cov = { path = "../../../rust-sgx-sdk/sgx_cov" }
#sgx_crypto_helper = { path = "../../../rust-sgx-sdk/sgx_crypto_helper" }
sgx_libc = { path = "../../../rust-sgx-sdk/sgx_libc" }
sgx_rand = { path = "../../../rust-sgx-sdk/sgx_rand" }
#sgx_rand_derive = { path = "../../../rust-sgx-sdk/sgx_rand_derive" }
#sgx_serialize = { path = "../../../rust-sgx-sdk/sgx_serialize" }
#sgx_serialize_derive = { path = "../../../rust-sgx-sdk/sgx_serialize_derive" }
#sgx_serialize_derive_internals = { path = "../../../rust-sgx-sdk/sgx_serialize_derive_internals" }
sgx_crypto = { path = "../../../rust-sgx-sdk/sgx_crypto" }
#sgx_tcrypto_helper = { path = "../../../rust-sgx-sdk/sgx_tcrypto_helper" }
#sgx_tdh = { path = "../../../rust-sgx-sdk/sgx_tdh" }
#sgx_tkey_exchange = { path = "../../../rust-sgx-sdk/sgx_tkey_exchange" }
#sgx_tprotected_fs = { path = "../../../rust-sgx-sdk/sgx_protected_fs/tfs" }
sgx_trts = { path = "../../../rust-sgx-sdk/sgx_trts" }
# sgx_tse = { path = "../../../rust-sgx-sdk/sgx_tse" }
#sgx_tseal = { path = "../../../rust-sgx-sdk/sgx_tseal" }
sgx_tstd = { path = "../../../rust-sgx-sdk/sgx_tstd" }
#sgx_tunittest = { path = "../../../rust-sgx-sdk/sgx_tunittest" }
sgx_types = { path = "../../../rust-sgx-sdk/sgx_types" }
#sgx_crypto = { path = "../../../rust-sgx-sdk/sgx_crypto" }
sgx_unwind = { path = "../../../rust-sgx-sdk/sgx_unwind" }
#sgx_urts = { path = "../../../rust-sgx-sdk/sgx_urts" }

[patch.crates-io]
shared-ids = { path = "../../../other/shared-ids" }
