[package]
name = "damysus-tee"
version = "1.0.0"
edition = "2021"
build = "build.rs"
links = "damysus_tee_u"

[dependencies]
shared-ids = { workspace = true }
id-set = { workspace = true }
damysus-base = { workspace = true }
damysus-tee-shared = { workspace = true }
remote-attestation = { workspace = true }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
remote-attestation-shared = { workspace = true }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx-utils = { workspace = true }
bincode = "1.3"
thiserror = "1.0"
sgx_crypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", default-features = false, features = [
    "ucrypto",
] }

[build-dependencies]
rust-sgx-sdk-build-helper = { workspace = true }
getrandom = "0.3"
