[package]
name = "damysus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
sha2 = "0.10"
blake2 = "0.10"
serde_bytes = "0.11.5"
shared-ids = { workspace = true }
once_cell = "1"
id-set = { workspace = true }
transaction-trait = { workspace = true }
tracing = "0.1"
heaps = { workspace = true }
damysus-base = { workspace = true }
hashbar = "1.0.2"

[dev-dependencies]
rayon = "1"
rand = "0.8"
rand_chacha = "0.3"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
