[package]
name = "nxbft-base"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
hashbar = "1.0.2"
shared-ids = { workspace = true }
serde = "1"
heaps = { workspace = true }
id-set = { workspace = true }
sha2 = "0.10.8"
getrandom = "0.2"
rangemap = { version = "1.5.1", features = ["serde1"] }
thiserror = "1"
uuid = { version = "1.0.0", default-features = false, features = [
    "v4",
    "serde",
] }
hex = "0.4.3"
blake2 = "0.10"
