[package]
name = "nxbft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heaps = { workspace = true }
shared-ids = { workspace = true }
transaction-trait = { workspace = true }
id-set = { workspace = true }
nxbft-base = { workspace = true }
thiserror = "1"
getrandom = "0.2"
rand = "0.8"
rand_chacha = "0.3"
serde = "1"
tracing = "0.1.10"
sha2 = "0.10.8"
uuid = { version = "1.0.0", default-features = false, features = [
    "v4",
    "serde",
] }
rangemap = { version = "1.5.1", features = ["serde1"] }
chrono = { version = "0.4" }
derivative = "2.2"
hashbar = "1.0.2"
either = "1.8.1"
hex = "0.4.3"
blake2 = "0.10"

[dev-dependencies]
rayon = "1"
test-log = { version = "0.2.11", default-features = false, features = [
    "trace",
] }
